# Tempest

./: .gitignore  LICENSE  LICENSE.md  README.md  devlog.md  techplan.md
Anvil/: .gitignore  Cargo.toml  README.md  config.toml
Anvil/src/: main.rs  routes.rs
conduit/: .gitignore  Cargo.toml  config.toml  readme.md
conduit/src/: commands.rs  main.rs
conduit_gui/: Cargo.toml
conduit_gui/src/: main.rs  models.rs  styles.css
conduit_gui/src/components/: dashboard.rs  login.rs
conduit_gui/src/services/: api.rs  cfg.rs  mod.rs  output.rs  upload.rs
imps/experimental_win/: .gitignore  implant.c  win2.py
imps/experimental_win/base_c/: implant.c
imps/experimental_win/invoke_imp/: Cargo.toml  readme.md
imps/experimental_win/invoke_imp/src/: func.rs  lib.rs  main.rs  proto.rs
imps/linux_imp/: Cargo.toml  Cross.toml
imps/linux_imp/src/: lib.rs  main.rs  proto.rs
imps/macimp/: Cargo.toml  README.md
imps/macimp/src/: func.rs  main.rs
imps/windows_ldr/: Cargo.toml  Cross.toml  readme.md  rust-toolchain.toml
imps/windows_ldr/src/: func.rs  lib.rs  main.rs  proto.rs
imps/windows_nhk/: Cargo.toml  readme.md
imps/windows_nhk/src/: func.rs  proto.rs
imps/windows_noldr/: Cargo.toml  Cross.toml  readme.md
imps/windows_noldr/src/: func.rs  lib.rs  proto.rs
modules_wip/: .gitignore
modules_wip/cofldr/: Cargo.toml
modules_wip/cofldr/src/: main.rs
modules_wip/noldr/: Cargo.toml  rust-toolchain.toml
modules_wip/noldr/src/: lib.rs  main.rs
modules_wip/oxide_ldr/: Cargo.toml
modules_wip/oxide_ldr/src/: lib.rs  main.rs
modules_wip/process_list/: Cargo.toml
modules_wip/process_list/src/: lib.rs  main.rs
modules_wip/whoami/: .gitignore  Cargo.toml
modules_wip/whoami/src/: lib.rs  main.rs
modules_wip/wmi_runner/: Cargo.toml  readme.md
modules_wip/wmi_runner/src/: lib.rs  main.rs
