[package]
name = "conduit"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossterm = { version = "0.25", features = ["event-stream"] }
ratatui = "0.20"
futures = "0.3"
reqwest = { version = "0.11.4", features = ["json", "native-tls", "tokio-native-tls", "blocking"] }
base64 = "0.21.2"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0.171", features = ["derive"] }
serde_json = "1.0.103"
chrono = "0.4.26"
rusqlite = {version = "0.29.0", features = ["bundled"]}
actix-web = { version = "4.3.1"}
config = "0.10.1"

[profile.release]
strip = true  # Automatically strip symbols from the binary.
opt-level = "z"  # Optimize for size.
lto = true
codegen-units = 1
panic = "abort"