[package]
name = "linux_imp"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
path = "src/lib.rs"
crate-type = ["staticlib", "cdylib"]

[dependencies]
serde = { version = "1.0.173", features = ["derive"] }
serde_json = "1.0.103"
litcrypt = "0.3.0"
base64 = "0.21.2"
reqwest = { version = "0.11.24", features = ["blocking"] }
openssl = { version = "0.10", features = ["vendored"] }

[profile.release]
strip = true  # Automatically strip symbols from the binary.
opt-level = "z"  # Optimize for size.
lto = true
codegen-units = 1
panic = "abort"
