[package]
name = "windows_nhk"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"
crate-type = ["staticlib", "cdylib"]

[dependencies]
serde = { version = "1.0.173", features = ["derive"] }
litcrypt = "0.3.0"
dinvoke_rs = "0.2.0"

[profile.release]
strip = true  # Automatically strip symbols from the binary.
opt-level = "z"  # Optimize for size.
lto = true
codegen-units = 1
panic = "abort"