[package]
name = "noldr"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "noldr"
path = "src/lib.rs"

[profile.release]
opt-level = "z"     # Optimize for size.
lto = true          # Enable Link Time Optimization
codegen-units = 1   # Reduce number of codegen units to increase optimizations.
panic = "abort"     # Abort on panic
strip = true        # Automatically strip symbols from the binary.

[dependencies]
windows = { version = "0.56.0", features = [ 
    "Win32_System_Kernel", 
    "Win32_System_Threading", 
    "Win32_System_Kernel",
    "Win32_System_WindowsProgramming",
    "Win32_System_SystemServices",
    "Win32_System_Diagnostics_Debug",
    "Win32_System_SystemInformation",
    "Wdk_Foundation"] }
    memoffset = "0.9.1"
