[package]
name = "whoami"
version = "0.1.0"
edition = "2021"

[lib]
name = "whoami"
path = "src/lib.rs"

[profile.release]
opt-level = "z"     # Optimize for size.
lto = true          # Enable Link Time Optimization
codegen-units = 1   # Reduce number of codegen units to increase optimizations.
panic = "abort"     # Abort on panic
strip = true        # Automatically strip symbols from the binary.

[dependencies]
ntapi = "0.4.0"
winapi = "0.3.9"
litcrypt = "0.3.0"

[dependencies.windows-sys]
version = "0.45.0"
features = ["Win32_System_Kernel",
"Win32_Foundation"]
