[package]
name = "invoke_imp"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"
crate-type = ["staticlib", "cdylib"]

[dependencies]
dinvokeRs = { git = "https://github.com/Kudaes/DInvoke_rs", branch = "main" }
litcrypt2 = "0.1.2"

[profile.release]
strip = true  # Automatically strip symbols from the binary.
opt-level = "z"  # Optimize for size.
lto = true
codegen-units = 1
panic = "abort"