[package]
name = "invoke_imp"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"
crate-type = ["staticlib", "cdylib"]

[dependencies]
dinvoke_rs = { version = "0.1.6", features = ["syscall"] }
windows-sys = { version = "0.48", features = ["Win32_System_SystemInformation", "Win32_Networking", "Win32_Networking_WinInet" ] }
litcrypt2 = "0.1.2"
serde = { version = "1.0.173", features = ["derive"] }
ntapi = "0.4.0"
winapi = { version = "0.3.9", features = ["processthreadsapi", "errhandlingapi", "psapi"]}
whoami = { path = "../../../modules_wip/whoami" }

[profile.release]
strip = true  # Automatically strip symbols from the binary.
opt-level = "z"  # Optimize for size.
lto = true
codegen-units = 1
panic = "abort"